# sem2_lab4

./: .clangd  CMakeLists.txt
include/LazySequence/: ActionChangeCardinal.hpp  ActionChangeOrdinal.hpp  CMakeLists.txt  Generator.hpp  LazySequence.hpp
include/LazySequence/declaration/: LazySequence.hpp
include/LazySequence/implementation/: Generator.tpp  LazySequence.tpp
include/Sequences/: CMakeLists.txt
include/Sequences/other/: Exceptions.hpp  ICollection.hpp  IEnumerable.hpp  IEnumerator.hpp  IGroupIRing.hpp  Implementation.hpp  Interfaces.hpp  Option.hpp  SequenceUtils.hpp
include/Sequences/sequences/: AdaptiveSequence.hpp  ArraySequence.hpp  BinaryHeap.hpp  BinaryHeap.tpp  BitSequence.hpp  DynamicArray.hpp  LinkedList.hpp  ListSequence.hpp  PriorityQueue.hpp  PriorityQueue.tpp  SegmentedList.hpp  SeqCollection.hpp  Sequence.hpp
include/streams/: CMakeLists.txt  IStreams.hpp  ReadOnlySrc.hpp  Streams.hpp  WriteOnlySrc.hpp
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  SequenceWrapper.hpp  TabAlgebra.cpp  TabAlgebra.hpp  TabBase.cpp  TabBase.hpp  TabOrdinals.cpp  TabOrdinals.hpp
tests/: ActionChangeOrdinalTests.cpp  CMakeLists.txt  LazySequenceTests.cpp  LazySequenceUtiltsTests.cpp  StreamsTests.cpp  TestUtils.hpp
